// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HOC withTooltip Tag, tooltip with a card 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className="c1"
    type="SECONDARY"
  >
    This a tag with tooltip
  </div>
</div>
`;

exports[`Storyshots HOC withTooltip Tag, tooltip with text 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className="c1"
    type="SECONDARY"
  >
    This a tag with tooltip
  </div>
</div>
`;

exports[`Storyshots HOC withTooltip Text, tooltip disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={18}
    type="#2f313a"
  >
    Farmblocks-text
  </div>
</div>
`;

exports[`Storyshots HOC withTooltip Text, tooltip with text 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className="c1"
    size={18}
    type="#2f313a"
  >
    Farmblocks-text
  </div>
</div>
`;
